# exchange_trade_importer

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  setup.py
src/exchange_trade_importer/: __init__.py
src/exchange_trade_importer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/exchange_trade_importer/models/: __init__.py  binance_trade.py  coin.py  trade.py
src/exchange_trade_importer/utils/: __init__.py  checker.py  file_processer.py  mongo.py
storage/deposit_history/: DepositHistory.xlsx
storage/trade_history/: from_201712_to_201802_TradeHistory.xlsx  from_201803_to_201805_TradeHistory.xlsx  from_201806_to_201808_TradeHistory.xlsx  from_201809_to_201811_TradeHistory.xlsx  from_201812_to_201902_TradeHistory.xlsx  from_201903_to_201905_TradeHistory.xlsx  from_201906_to_201907_TradeHistory.xlsx
tests/: test_exchange_trade_importer.py
