[tool.poetry]
name = "exchange_trade_importer"
version = "0.1.0"
description = "Read and process your cryptocurrency exchange buys and sells and offer you an API to query the data"
authors = ["valeas90 <jonvaleas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pymongo = "^3.9"
xlrd = "^1.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
exchange_trade_importer = "exchange_trade_importer:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
