[tool.poetry]
name = "exchange_trade_importer"
version = "1.0.0"
description = "A service to load cryptocurrency exchange trades"
authors = ["valeas90 <jonvaleas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pymongo = "^3.9"
xlrd = "^1.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[tool.poetry.scripts]
exchange_trade_importer = "exchange_trade_importer:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
